# plugin-web-access

./: README.md  pyproject.toml
plugin_web_access/: __init__.py  fetch.py  http_client.py  luna-plugin.toml  safety.py  search.py
tests/: test_web_access.py
